--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest
+  - pytest --cov-report term --cov=luxor
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash) 
