--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,28 @@
 astroid==2.3.3
+attrs==19.3.0
 autopep8==1.5.2
+coverage==5.1
 executing==0.4.3
+flake8==3.8.1
+importlib-metadata==1.6.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
-pycodestyle==2.5.0
+more-itertools==8.2.0
+packaging==20.3
+pluggy==0.13.1
+py==1.8.1
+pycodestyle==2.6.0
+pydocstyle==5.0.2
+pyflakes==2.2.0
 pylint==2.4.4
+pyparsing==2.4.7
+pytest==5.4.2
+pytest-cov==2.8.1
 python-varname==0.1.0
 six==1.14.0
+snowballstemmer==2.0.0
 typed-ast==1.4.1
+wcwidth==0.1.9
 wrapt==1.11.2
+zipp==3.1.0
